--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "@types/react-dom": "^18.2.4",
   
     
+  "aos": "^2.3.4",
+  
+    
   "react": "^18.2.0",
   
     
@@ -145,6 +148,9 @@
   },
   
   "devDependencies": {
+  
+    
+  "@types/aos": "^3.0.4",
   
     
   "gh-pages": "^5.0.0"
